tests/rosetta/out/Fortran/approximate-equality.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program approximate_equality
  implicit none
    integer :: relTol
    integer :: t
    integer :: u
    integer :: guess
    integer :: i
    integer :: root2
    integer, dimension(9,2) :: pairs
    integer :: pair
    integer :: i0
      integer :: s
      character(len=100) :: tmp1
      character(len=100) :: s2
      character(len=100) :: s3
  call main()
  contains
  recursive real function abs(x) result(res)
    real, intent(in) :: x
    if ((x < 0)) then
      res = -x
      return
    end if
    res = x
    return
  end function abs
  recursive real function maxf(a,b) result(res)
    real, intent(in) :: a
    real, intent(in) :: b
    if ((a > b)) then
      res = a
      return
    end if
    res = b
    return
  end function maxf
  recursive logical function isClose(a,b) result(res)
    real, intent(in) :: a
    real, intent(in) :: b
    relTol = 1e-09
    t = abs((a - b))
    u = (relTol * maxf(abs(a),abs(b)))
    res = (t <= u)
    return
  end function isClose
  recursive real function sqrtApprox(x) result(res)
    real, intent(in) :: x
    guess = x
    i = 0
    do while ((i < 10))
      guess = ((((guess + x) / guess)) / 2)
      i = (i + 1)
    end do
    res = guess
    return
  end function sqrtApprox
  recursive subroutine main()
    root2 = sqrtApprox(2)
    pairs = reshape((/1.0000000000000002e+14,1.0000000000000002e+14,100.01,100.011,(1.0000000000000002e+13 / 10000),1.0000000000000001e+09,0.001,0.0010000001,1.01e-22,0,(root2 * root2),2,((-root2) * root2),-2,1e+17,1e+17,3.141592653589793,3.141592653589793/),(/9,2/))
    do i0 = 1, size(pairs)
      pair = pairs(i0)
      a = pair(((0)+1))
      b = pair(((1)+1))
      if (isClose(a,b)) then
        tmp1 = '≈'
      else
        tmp1 = '≉'
      end if
      s = tmp1
      write(s2,'(G0)') a
      write(s3,'(G0)') b
      print *, trim(trim(trim(s2 // ' ') // s) // ' ') // s3
    end do
  end subroutine main
end program approximate_equality
